// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style on mobile 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <ModalImage />
          </View>
        </View>
        <View
          style={
            Object {
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": -13.75,
                "marginTop": 10,
              }
            }
          >
            <ArticleLabel />
          </View>
          <Text
            style={
              Object {
                "color": "#1D1D1B",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 30,
                "fontWeight": "700",
                "lineHeight": 35,
                "marginBottom": 7,
                "marginTop": 15,
              }
            }
          >
            Some Headline
          </Text>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Regular",
                "fontSize": 20,
                "lineHeight": 25,
                "paddingBottom": 10,
              }
            }
          >
            Some Standfirst
          </Text>
          <ArticleFlags />
        </View>
        <View
          style={
            Object {
              "borderBottomColor": "#DBDBDB",
              "borderBottomWidth": 1,
              "marginBottom": 20,
              "marginLeft": 10,
              "marginRight": 10,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 9,
            }
          }
        >
          <View
            style={
              Object {
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "paddingBottom": 4,
                "paddingTop": 9,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                }
              }
            >
              <ArticleBylineWithLinks />
            </Text>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "paddingBottom": 4,
                "paddingTop": 9,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                }
              }
            >
              Friday March 13 2015, 6:54pm, The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <Caption
          style={
            Object {
              "container": Object {
                "paddingLeft": 10,
              },
            }
          }
        />
      </View>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <View>
        <RelatedArticles />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`full article with style on tablet 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": 660,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "marginTop": 30,
              "paddingLeft": 10,
              "paddingRight": 10,
              "width": 660,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": -13.75,
                "marginTop": 10,
              }
            }
          >
            <ArticleLabel />
          </View>
          <Text
            style={
              Object {
                "color": "#1D1D1B",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 45,
                "fontWeight": "700",
                "lineHeight": 45,
                "marginBottom": 7,
                "marginTop": 15,
              }
            }
          >
            Some Headline
          </Text>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Regular",
                "fontSize": 20,
                "lineHeight": 25,
                "paddingBottom": 10,
              }
            }
          >
            Some Standfirst
          </Text>
          <ArticleFlags />
        </View>
        <View
          style={
            Object {
              "borderBottomColor": "#DBDBDB",
              "borderBottomWidth": 1,
              "marginBottom": 20,
              "marginLeft": 0,
              "marginRight": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 9,
            }
          }
        >
          <View
            style={
              Object {
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "paddingBottom": 4,
                "paddingTop": 9,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                }
              }
            >
              <ArticleBylineWithLinks />
            </Text>
          </View>
          <View
            style={
              Object {
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "paddingBottom": 4,
                "paddingTop": 9,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 15,
                }
              }
            >
              Friday March 13 2015, 6:54pm, The Times
            </Text>
          </View>
        </View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 10,
                "paddingBottom": 10,
              }
            }
          >
            <ModalImage />
            <Caption />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": 660,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "width": 660,
          }
        }
      >
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": 660,
          }
        }
      >
        <Video />
        <Caption
          style={
            Object {
              "container": Object {
                "paddingLeft": 10,
              },
            }
          }
        />
      </View>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "maxWidth": 660,
            "width": "100%",
          }
        }
      >
        <RelatedArticles />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;
